# unbase

./: .gitignore  .travis.yml  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  Subscriptions.md  TODO.txt  code_structure.md  docker-compose.yml  factorization-diagram.txt  index.html  package.json  params.json  rustfmt.toml  webpack.config.js
crates/beacon-clock-sim/: Cargo.toml  build.rs  index.html  package.json
crates/beacon-clock-sim/src/: app.rs  canvas.rs  controls.rs  lib.rs  util.rs
crates/beacon-clock-sim/src/app/: canvas.rs  color.rs  controls.rs  mod.rs  position.rs  render.rs  state.rs
crates/beacon-clock-sim/src/app/render/: render_slabs.rs  shader.rs
crates/beacon-clock-sim/src/app/render/shader/: memo-vertex.glsl  slab-fragment.glsl  slab-vertex.glsl
crates/beacon-clock-sim/src/app/state/: camera.rs  mouse.rs  slab.rs
crates/beacon-clock-sim/src/app/store/: behavior.rs  mod.rs  slab.rs
crates/beacon-clock-sim/src/render/: mod.rs  render_meshes.rs  render_slabs.rs  render_transmission.rs  texture_unit.rs
crates/beacon-clock-sim/src/shader/: memo-fragment.glsl  mod.rs
crates/beacon-clock-sim/src/util/: panel.rs  position.rs  texture.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs  standard.rs  wasm.rs
crates/tree-clock-sim/: Cargo.toml  TODO.md  index.html  package-lock.json  package.json  tsconfig.json
crates/tree-clock-sim-old/: .gitignore  TODO.md  webpack.config.js
crates/tree-clock-sim-old/src/: lib.rs
crates/tree-clock-sim-old/web/: index.ts  memo.ts  slab.ts
crates/tree-clock-sim/src/: lib.rs
crates/tree-clock-sim/web/: index.html  index.ts  shader.ts
crates/unbase/: Cargo.toml
crates/unbase/examples/: ping-pong.rs  ping.rs  pong.rs
crates/unbase/src/: entity.rs  error.rs  lib.rs  query.rs  slab.rs  subject.rs  subjecthandle.rs
crates/unbase/src/context/: interface.rs  internal.rs  manager.rs  mod.rs  stash.rs
crates/unbase/src/head/: mod.rs  serde.rs
crates/unbase/src/index/: fixed.rs  mod.rs
crates/unbase/src/memorefhead/: mod.rs  projection.rs  serde.rs
crates/unbase/src/network/: mod.rs  transmitter.rs
crates/unbase/src/network/packet/: mod.rs  serde.rs
crates/unbase/src/network/transport/: blackhole.rs  local_direct.rs  mod.rs  simulator.rs  udp.rs
crates/unbase/src/slab/: agent.rs  attic.rs  common_structs.rs  convenience.rs  handle.rs  ingress.rs  mod.rs  state.rs
crates/unbase/src/slab/memo/: mod.rs  serde.rs
crates/unbase/src/slab/memoref/: mod.rs  serde.rs
crates/unbase/src/slab/slabref/: mod.rs  serde.rs
crates/unbase/src/util/: logging.rs  mod.rs  serde.rs  simulator.rs  system_creator.rs  task.rs
crates/unbase/tests/: basic_eventual.rs  basic_record_retrieval.rs  eventual_consistency.rs  indexes.rs  init.rs  remote_traversal.rs  serialize.rs  topological_subject_iter.rs  udp.rs
crates/unbase_test_util/: Cargo.toml
crates/unbase_test_util/src/: lib.rs  logging.rs  simulator.rs  test.rs
crates/unbase_util/: Cargo.toml
crates/unbase_util/src/: lib.rs  log.rs
crates/unbase_web/: Cargo.toml
crates/unbase_web/src/: lib.rs
crates/unbase_web/tests/: init.rs
docs/: CNAME  CONSISTENCY_MODEL.md  DESIGN_GOALS.md  Dockerfile  Model.graffle  README.md  _config.docker.yml  _config.yml  docker-compose.yml  index.md  logo.ai  storyboard.txt
docs/Unbase Design.graffle/: data.plist  image1.tiff
docs/Unbase.graffle/: data.plist
docs/_includes/: header.html  navigation.html
docs/_layouts/: default.html
docs/css/: main.css
docs/design/: bibliography.md  cheat-sheet.md  consistency-model.md  core-concepts.md  data-types.md  durability.md  faq.md  glossary.md  goals.md  the-problem.md
docs/simulation/: beacon-clock-1.md  tree-clock-sim-1.md
docs/simulation/beacon-clock-1/: index.js  index.js.map
docs/simulation/tree-clock-1/: index.html
docs/todo/: SIMULATION_PLAN.md
examples/: ping-pong.rs
js/: TODO.txt  grain.js  memo.js  mesh.js  package.json  record.js  slab.js  slabtest.js  telehash_test.js  test.js
js/lib/: context.js  memo.js  mesh.js  record.js  slab.js
js/mixin/: peerable.js
js/test/: 02-eventual-consistency.js  02.eventual-consistency.js  03-basic-causal.js  04-intermediate-causal.js  basic.js
old/js/lib/: record.js  slab.js
old/js/test/: 05-disappearing-messages.js
schema/: message.capnp
src/: build.rs  context.rs  error.rs  lib.rs  memo.rs  memoref.rs  memorefhead.rs  network.rs  query.rs  record.rs  slab.rs  subject.rs
src/context/: manager.rs  mod.rs  subject_graph.rs  subject_head_links.rs  topo_subject_head_iter.rs
src/index/: fixed.rs  mod.rs
src/memo/: mod.rs  serde.rs
src/memoref/: mod.rs  serde.rs
src/memorefhead/: mod.rs  projection.rs  serde.rs
src/network/: channel.rs  envelope.rs  memostream.rs  mod.rs  peer.rs  simulator.rs  slabref.rs  transmitter.rs
src/network/packet/: mod.rs  serde.rs
src/network/slabref/: mod.rs  serde.rs
src/network/transport/: blackhole.rs  local_direct.rs  mod.rs  simulator.rs  transmitter.rs  udp.rs
src/slab/: attic.rs  basics.rs  common_structs.rs  convenience.rs  core.rs  egress.rs  emission.rs  ingress.rs  inner.rs  memohandling.rs  mod.rs
src/slab/memo/: mod.rs  serde.rs
src/slab/memoref/: mod.rs  serde.rs
src/slab/slabref/: mod.rs  serde.rs
src/transports/: mod.rs
src/util/: mod.rs  serde.rs  system_creator.rs
tests/: 01-init.rs  02-basic_eventual.rs  03-basic_eventual.rs  03-remote-traversal.rs  04-indexes.rs  04-remote-traversal.rs  05-indexes.rs  basic.rs  basic_eventual.rs  basic_record_retrieval.rs  indexes.rs  init.rs  ping-pong.rs  remote-traversal.rs  remote_traversal.rs  serialize.rs  topological_subject_iter.rs  udp.rs  wasm.rs
timer/: Cargo.toml
timer/src/: lib.rs  wasm.rs
unbase/: Cargo.toml
unbase/src/: lib.rs
unbase/src/memorefhead/: serde.rs
unbase/src/network/: mod.rs  transmitter.rs
unbase/src/slab/: basics.rs  core.rs  devutils.rs  egress.rs  ingress.rs
unbase/tests/: serialize.rs
unbase_web/: Cargo.toml  LICENSE  index.js
unbase_web/src/: lib.rs  timeout.rs
unbase_web/src/util/: mod.rs
unbase_web/tests/: init.rs
(+9 files in other folders)
