[package]
name = "beacon-clock-sim"
version = "0.1.0"
authors = ["Daniel Norman"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
wasm-bindgen-console-logger = "0.1.1"
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"
lazy_static = "1.4.0"
bincode = "=1.0.1"
blender-armature = "=0.1.7"
blender-mesh = "=0.3.3"
console_error_panic_hook = "=0.1.5"
nalgebra = "=0.16.12"

[build-dependencies]
bincode = "=1.0.1"
blender-armature = "=0.1.7"
blender-mesh = "=0.3.3"
landon = "=0.1.2"

[dependencies.web-sys]
version = "^0.3.6"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

[profile.release]
lto = true
