[package]
name = "unbase"
version = "0.0.2"
authors = ["Daniel Norman <daniel@gudtech.com>"]
edition = "2018"
description = "Unbase is a causal, coordination-free distributed data-persistence and application framework. It is fundamentally reactive, fault tolerant, and decentralized."
documentation = "https://docs.rs/unbase/"
homepage = "https://unba.se"
repository = "https://github.com/unbase/unbase"
readme = "README.md"
categories = ["database"]
license = "Apache-2.0"
#build = "build.rs"
exclude = [
    "docs/*",
    "jekyll-docs-template/*",
    "old/*",
    "simulation/*",
    "schema/*"
]

[dependencies]

timer = { path = "../timer" }
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly", "compat"] }

log = "0.4.6"
sha2 = "0.8.0"
itertools = "0.8.0"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"
# TODO upgrade serde
#serde = "1.0.90"
#serde_json = "1.0.39"
#serde_derive = "1.0.91"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.1.20" }
tokio-async-await = "0.1.7"
env_logger = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-console-logger = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

#[build-dependencies]
#capnpc = "0.8"
