[package]
name = "unbase"
version = "0.0.2"
authors = ["Daniel Norman <daniel@gudtech.com>"]
edition = "2018"
description = "Unbase is a causal, coordination-free distributed data-persistence and application framework. It is fundamentally reactive, fault tolerant, and decentralized."
documentation = "https://docs.rs/unbase/"
homepage = "https://unba.se"
repository = "https://github.com/unbase/unbase"
readme = "README.md"
categories = ["database"]
license = "Apache-2.0"
#build = "build.rs"
exclude = [
    "docs/*",
    "jekyll-docs-template/*",
    "old/*",
    "simulation/*",
    "schema/*"
]

[dependencies]

timer = { path = "../timer" }
futures = "0.3.1"

log = "0.4.6"
sha2 = "0.8.0"
serde = "0.9.11"
serde_derive = "0.9.11"
serde_json = "0.9.9"
# TODO upgrade serde
#serde = "1.0.90"
#serde_json = "1.0.39"
#serde_derive = "1.0.91"
futures-util = "0.3.1"
tracing = "0.1.10"
tracing-futures = "0.2.0"
itertools = "0.8.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.3.0"
env_logger = "0.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"
wasm-bindgen-console-logger = "^0.1.1"
console_error_panic_hook = '0.1'
#js-sys = "0.3.32"

[dev-dependencies]
futures-await-test = "0.3.0"
wasm-bindgen-test = "0.3.5"
unbase_test_util = { path = "../unbase_test_util" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["trace_basic"]
trace_jaeger = []
trace_basic = []

#[build-dependencies]
#capnpc = "0.8"
