[package]
name = "unbase_util"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

[dependencies]
log = "0.4.6"
ctor = "0.1.12"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
env_logger = "0.6.1"
futures-await-test = "0.3.0"

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "0.2.55"
wasm-bindgen-console-logger = "^0.1.1"
wasm-bindgen-test = "0.3.5"
wasm-bindgen-futures = "0.4.5"