[package]
name = "unbase_web"
version = "0.1.0"
authors = ["Daniel Norman <daniel@danielnorman.net>"]
edition = "2018"

[dependencies]
unbase = { path = "../unbase" }
futures = "0.3.1"
timer = { path = "../timer" }

log = "0.4.8"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"
wasm-bindgen-test = "0.3.5"
wasm-bindgen-console-logger = "0.1.1"
js-sys = "0.3.32"

[dev-dependencies]
unbase_test_util = { path = "../unbase_test_util" }